# hotpotqa

./: .env  .env.example  .gitignore  COMPARISON_ircot_refactored_vs_ircot_hotpotqa.md  README.md  eda.py  main.py  pyproject.toml  requirements.txt  results.csv  results_qwen.csv  setup.py
configs/: default.yaml  preprocessing.yaml
data/embeddings/: README.md
data/hotpotqa/: download.sh
data/raw/: download.sh
evaluation/: qwen_eval.py  run_evaluation_pipeline.py
experiments/: 01_compare_retrievers.py  02_sentence_vs_paragraph.py  03_sentence_optimizations.py  INTEGRATION_COMPLETE.md  INTEGRATION_GUIDE.md  QUICK_START.md  README.md  run_all_experiments.py
mateo/: evaluate_pipeline.py  generate_predictions.py  probes.py  sweep_thresholds.py  train_probes.py
mateo/decomposition/: __init__.py  decomposition.py  prompts.py  retrieve.py
notebooks/: 01_quickstart_hotpotqa.ipynb  02_simple_rag.ipynb  03_wikipedia_rag.ipynb  04_retrieval.ipynb  EDA_README.md  RETRIEVAL_NOTEBOOK_SUMMARY.md  eda.ipynb  test_cell1.py  test_full_pipeline.py  wiki_chunks_test.jsonl  wiki_faiss.index  wiki_meta.jsonl  wiki_vectors.npy  wiki_vectors_batch1.npy
outputs/Decomposition_20251210_130227/: detailed_per_question.md  report.md
outputs/IRCoT_20251210_124634/: detailed_per_question.md  report.md
outputs/SimpleCoT_20251210_131438/: detailed_per_question.md  report.md
outputs/ablation/comparison_20251210_140921/: all_per_question.json  all_summaries.json
outputs/ablation/comparison_20251210_152213/: all_per_question.json  all_summaries.json
outputs/comparison_20251210_131438/: comparison_report.md
outputs/mateo/: attention_answer_balanced_metrics_epoch_1.csv  attention_answer_balanced_recall1_metrics_epoch_1.csv  attention_recall_balanced_metrics_epoch_1.csv  baseline_answer_balanced_metrics_epoch_1.csv  baseline_answer_balanced_recall1_metrics_epoch_1.csv  baseline_recall_balanced_metrics_epoch_1.csv
outputs/simple_cot/: train_dataset.csv  train_dataset.csv.backup
scripts/: analyze_dataset.py  experiments.py  run_preprocessing.py  test_ircot_pipeline.py  test_llm_output.py  test_mistral_client.py  test_wiki_loading.py  validate_data.py
src/: __init__.py
src/config/: __init__.py  config_manager.py
src/data/: __init__.py  dataset.py  loader.py  validator.py
src/models/: mistral_client.py
src/preprocessing/: __init__.py  context.py  multihop.py  pipeline.py  tokenizer.py
src/reasoning/: README.md  __init__.py  sentence_retrieval.py
src/reasoning/core/: data.py  embeddings.py  evaluation.py  langsmith_helpers.py  llm.py  metrics.py  retriever.py  types.py  visualization.py
src/reasoning/decomposition/: __init__.py  config.py  decomposition.py  prompts.py
src/reasoning/experiments/: __init__.py  adapters.py  run_ablation.py  run_experiments.py  runner.py
src/reasoning/ircot/: __init__.py  config.py  demo_loader.py  ircot.py  llm_client.py  prompts.py  qa_reader.py  retriever.py  run_ircot_example.py
src/reasoning/ircot_refactored/: EVALUATION_SUMMARY.md  pyproject.toml  run_detailed_example.py
src/reasoning/ircot_refactored/src/ircot/: __init__.py  answer_extraction.py  config.py  data_loader.py  demo_loader.py  embeddings.py  evaluate.py  ircot.py  llm_client.py  main.py  prompts.py  retriever.py  types.py
src/reasoning/ircot_refactored/tests/: __init__.py  test_ircot.py
src/reasoning/methods/: __init__.py
src/reasoning/methods/decomposition/: __init__.py  config.py  reasoner.py
src/reasoning/methods/ircot/: __init__.py  answer_extraction.py  config.py  demo_loader.py  system.py
src/reasoning/methods/simple_cot/: __init__.py  config.py  probes.py  reasoner.py  train_probes.py
src/reasoning/prompts/: __init__.py  decomposition.py  ircot.py  simple_cot.py
src/reasoning/resources/demos/: gold_with_2_distractors_context_cot_qa_codex.txt
src/reasoning/simple_cot/: __init__.py  create_dataset.py  llm_client.py  prompts.py  run_training.py  simple_cot.py  train.py  train_probes.py  utils.py
src/utils/: __init__.py  analysis.py  cleaning.py  normalization.py
trained_probes/: probe_results_summary.csv  probe_results_summary_final.csv  probe_results_summary_planning.csv  probe_results_summary_subanswer.csv
