[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ircot"
version = "2.0.0"
description = "IRCoT - Interleaved Retrieval with Chain-of-Thought for HotpotQA"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "6CCSANLP Coursework"}
]
keywords = ["nlp", "qa", "hotpotqa", "ircot", "chain-of-thought", "retrieval"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21.0",
    "mistralai>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.scripts]
ircot = "ircot.main:main"

[project.urls]
Homepage = "https://github.com/your-repo/ircot"
Documentation = "https://github.com/your-repo/ircot#readme"
Repository = "https://github.com/your-repo/ircot"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ircot = ["resources/*.txt"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
